--- a/index.html
+++ b/index.html
@@ -1,28 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts Links -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <title>Frontend Mentor | Advice generator app</title>
+  </head>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Advice generator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <body>
+    <main>
+      <div class="container">
+        <figure>
+          <h1 class="advice__title">Advice #<span class="advice__number" id="advice-id">117</span></h1>
+          <blockquote class="advice__quote">
+            <p id="advice-text">It is easy to sit up and take notice, what's difficult is getting up and taking action.</p>
+          </blockquote>
+          <img
+            srcset="
+              images/pattern-divider-desktop.svg 444w,
+              images/pattern-divider-mobile.svg 295w
+              "
+            sizes="
+              (min-width: 27.75rem) 27.75rem,
+              (min-width: 18.4375rem) 18.4375rem
+              "  
+            src="images/pattern-divider-mobile.svg"
+            alt=""
+            aria-hidden="true">
+            <button type="button" id="new-advice" aria-label="Get more advice">
+              <img src="images/icon-dice.svg" alt="" aria-hidden="true">
+            </button>
+        </figure>
+      </div>
+    </main>
+    <footer>
+      <div class="main-footer container">
+        <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/a-woodworth" target="_blank">a-woodworth</a>.</p>
+      </div>
+    </footer>
+  </body>
 </html>
