--- a/index.html
+++ b/index.html
@@ -8,37 +8,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link href="styles.css" rel="stylesheet">
     <title>Frontend Mentor | Advice generator app</title>
   </head>
 
-  <body>
+  <body class="container">
     <main>
-      <div class="container">
-        <figure>
-          <h1 class="advice__title">Advice #<span class="advice__number" id="advice-id">117</span></h1>
-          <blockquote class="advice__quote">
-            <p id="advice-text">It is easy to sit up and take notice, what's difficult is getting up and taking action.</p>
-          </blockquote>
-          <img
-            srcset="
-              images/pattern-divider-desktop.svg 444w,
-              images/pattern-divider-mobile.svg 295w
-              "
-            sizes="
-              (min-width: 27.75rem) 27.75rem,
-              (min-width: 18.4375rem) 18.4375rem
-              "  
-            src="images/pattern-divider-mobile.svg"
-            alt=""
-            aria-hidden="true">
-            <button type="button" id="new-advice" aria-label="Get more advice">
-              <img src="images/icon-dice.svg" alt="" aria-hidden="true">
-            </button>
-        </figure>
-      </div>
+      <figure>
+        <h1 class="advice__title">Advice #<span class="advice__number" id="advice-id">117</span></h1>
+        <blockquote class="advice__quote">
+          <p id="advice-text">It is easy to sit up and take notice, what's difficult is getting up and taking action.</p>
+        </blockquote>
+        <img
+          srcset="
+            images/pattern-divider-desktop.svg 444w,
+            images/pattern-divider-mobile.svg 295w
+            "
+          sizes="
+            (min-width: 27.75rem) 27.75rem,
+            (min-width: 18.4375rem) 18.4375rem
+            "  
+          src="images/pattern-divider-mobile.svg"
+          alt=""
+          aria-hidden="true"
+          class="horizontal-rule">
+      </figure>
+      <button type="button" id="new-advice" aria-label="Get more advice">
+        <img src="images/icon-dice.svg" alt="" aria-hidden="true">
+      </button>
     </main>
     <footer>
-      <div class="main-footer container">
+      <div class="main-footer">
         <p class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/a-woodworth" target="_blank">a-woodworth</a>.</p>
       </div>
     </footer>
