Add aria to index and js.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <body class="container">
     <main>
-      <div class="advice__card">
+      <div class="advice__card" role="document">
         <h1 class="advice__title">
           Advice #<span class="advice__number" id="advice-id"><!-- Advice ID via JS --></span>
         </h1>
